# CoverageAnalysis

./: .gitignore  CMakeLists.txt  README.md  plan.md  report.md
.github/workflows/: coverage.yml
cmake/: CodeCoverage.cmake
scripts/: check_prereqs.bat  check_prereqs.ps1  check_prereqs.py  check_prereqs.sh  generate_landing_page.py  generate_merged_view.py  run_all.bat  run_all.ps1  run_all.py  run_gcov.bat  run_gcov.ps1  run_gcov.py  run_gcov.sh  run_llvm_cov.bat  run_llvm_cov.ps1  run_llvm_cov.py  run_llvm_cov.sh  run_microsoft_coverage.bat  run_microsoft_coverage.ps1  run_microsoft_coverage.py  run_opencpp_coverage.bat  run_opencpp_coverage.ps1  run_opencpp_coverage.py
src/: calculator.cpp  calculator.hpp  math_utils.hpp  shapes.cpp  shapes.hpp  stack.hpp  string_utils.hpp
tests/: CMakeLists.txt  test_calculator.cpp  test_math_utils.cpp  test_shapes.cpp  test_string_utils.cpp
